@@ -1,6 +1,6 @@
 Package: car
 Version: 3.0-4
-Date: 2019-10-16
+Date: 2019-10-24
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
